# secp256k1

./: ecdsa.py  prepare.sh
example/: CMakeLists.txt  run.sh
example/cl/: kernel.cl
example/include/crypto/: sha256.h
example/include/secp256k1/: config.h  ecmul.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  scalar.h  scalar_4x64_impl.h  scalar_8x32_impl.h  scalar_impl.h  util.h
example/src/: main.cpp  main_1.cpp  main_2.cpp  main_3.cpp  utils.hpp
src/: tests.c
